# todoers

./: .env  .envrc  .gitignore  API.md  CLAUDE.md  Cargo.toml  ENCRYPTION.md  Justfile  LICENSE  TUI.md  rust-toolchain.toml
todoers/: Cargo.toml  app_config.toml  build.rs  sqlx.toml
todoers-client/: Cargo.toml  sqlx.toml
todoers-client/.sqlx/: query-151c70f4d801a06b93dfef07f59766683303dfd0f3ce8f0769a31083a2e64f7f.json  query-1583abc0d6cabd1cc3e869e133545b3f29f3b5afe760b4c5e3d07e17b3629419.json  query-21381437c07df374f78d726adf81c74fa49f93d784a944b5a8c0e0592e891b08.json  query-26c42429e1ca17a40e4ea75045b3801cf38e7b01828710c197ba3931388bc418.json  query-2dc5a9cf109f2c335c3c5adabc3a871adb0619b216c451dfbe65cfe31ad94752.json  query-3c9fb19cfeeaf5a97f40f932999a05589a32b8937613cea20d9b94253d1826d1.json  query-4afcce682a2feec698c298d4add782c3188eabb4c8aaa8c61bf81e5b1d847509.json  query-550e54fd29187d1c8b276fb66f61834e585fb24d58149440ec8fce82a647daad.json  query-585c260e6b8bfdc24b338abe18126313548c1886fea9d8ebae23f0d902613b6a.json  query-66dd4a8cca80553a7fec04bb633f4cefec0ed0bedf12ca7096d3007e4c946027.json  query-89cfa091d781d07d241331358eb0022b8092e82422e6ea6ae2957e411fe83a69.json  query-9dae6164931fcddadb0bd2343566ddb8d8dd0fdd077361cea6f66dec81cf143d.json  query-a7c4c1431d4ba8c6194b14f853f16e0a0c93d7b5c7c4bfbf3db611fc2bfaa048.json  query-be2899ed6ea566a9a2fc9ba0241685c2249fd5e5f1ebf3d0647bfa33ec936ec0.json  query-c3b95efc4635170f17d41257bd1fbbf29c1186da9730418fef173b12a959b4b4.json  query-d4c89fc7d971b81442b1197b650198d20bbbad7bb36bf289b21f6535e1b0b84d.json  query-ea2c1a2fea624877c03c34e244e3ac7b257b4246d27ef35dc23e87302c6c5126.json  query-eea29589f3bcbf097a70188f1560b28085d46559ec67edee69b5ee583ee73787.json  query-f3d5326b0f5227f9ebfff766259e449ee79684ee62a543f53cae65818da37c8f.json  query-f9fd9285f313b1b6202e0b151ecfeb201ea436e9946f973e79392404216a3eb1.json  query-fdc46b369bc510ae2ed603600ff00d5490480f1321ed9f6ba82def8e206f21f8.json  query-ff03969bffee769623591498df9fd727d6a2eaf4f44916567447a45a78f88c76.json
todoers-client/src/: auth.rs  crypto.rs  db.rs  error.rs  lib.rs  list_doc.rs  model.rs  session.rs  sqlcipher.rs  store.rs  sync.rs  worker.rs
todoers-server/: Cargo.toml  build.rs  sqlx.toml  todoers.toml
todoers-server/.sqlx/: query-010989b7052e7643de76aa400cfb40e519a9ef118f1dc0040d291f8144375f20.json  query-0ac4f82a4b087c5645ad7417d63748b8fbdee802c3b1f268c2b25ab1126456f9.json  query-1815951980b50063eb6b8c78a3973d6fd3ef83d92842ab83b8a00d1d5d9c5203.json  query-19f08f14b36c7173aff8a47cfc4403e75a35af8ee8408fa58f52ccf92f10fa4c.json  query-1be5fe0ee8d99eb63f942f07e99810148417fb1da141829be356250829ebaa77.json  query-2622495d94065e8aedd1f4d82899191cf39746a57d7c2aaf6d5747b95d942c4d.json  query-3293bd5b2822ef0a1e12372db4b4b8f1e3a393f43d842461d1705b39dfa28775.json  query-366325082fc679d12b0b5b268d96a56bb8040ebe721ba495ed9e32041af86336.json  query-3ed4af0f5de16c5cb1995ef9808d78b00d0e4687b98640488867539b0e9083ce.json  query-40e8272bc9538498c6ccda499e050160aeff93368e1f3b20ea81cc013ca1dcbf.json  query-41f6242ac494f9913cb9bdc32e05c478c3f90a869f4b417584781bd7f07303a2.json  query-4a3a794bbabc3acfb80eb9e28c19b7760e1406e1c6a1ca497b5f869de30c6108.json  query-4bfafb8683a2d353f665a1cdc972d522b2c63d565d0a0f4878c56483179f414b.json  query-55226c0b25437d71fd9e049f495badd95b47aecd3df6b903ecdc25a766cf500d.json  query-60689daf0cc21e868ee4aebd69bbba505331c0de1e1548ac035835c61f8ce0a8.json  query-648e02d83712083a09a0c9d85821bfcb0222b2872163047d7418c817adf820d1.json  query-6e596f2ca0d2a24da79bf060f37d848fc375cfcf41699dcb87b0807b49f91349.json  query-6ecbbee16c5bfe1aa028ea8935e68ad92d7353cdfbe7656b700d685d0e597fcf.json  query-7d456196ff92a08beeda990aa445203198be57cd0348b8ffc84762468dcb0f0d.json  query-8720b5275745002780fa04f01e268092b30224fb4e5ea52bbe5c4e14e19f965c.json  query-8b2b568f1153a508685d17796c2e37979f7900ea2d67f122214300079e952ceb.json  query-8c977bdc5dc4e2d4d007a06dac8d9b7a226f8efec8d103f581fa373b666f664d.json  query-8f98746ffbe278a0cb0b5169402c01f341950852c656c050601f41d1fb5bbad1.json  query-9be584333ea65f364aa5e18b03d3117bb05ad0cdf956be7eed609ea4a1ccbdf5.json  query-9eb969c4f2ec168cae76d9ea3d80765153445b3577e042cc839034d275f83650.json  query-a0a88f0432ec3a79456fded1bbb41251f6b76803f224e45ff1ab78ab7cf2fe8d.json  query-a3ed6f0d423bca9983d93d2f120a78223978ad2867682d74de7467b065604918.json  query-a4f058b3117cb845162c487cee15ab44807036a601149a6da64dd440a065bed6.json  query-a5c1c686e479b7fcc23efa435282a16d61fe53628f3df1161c8b7a8fc14aaff4.json  query-a5c32de31eee0b5d1c4e53cb34bcab3b1e34ed72729dc7e89b7ee58fc8adc2d1.json  query-a9580a7dc29088b7e5e480a05b379b6d67d298d143c4c54372f97b3cbf9aa4e4.json  query-ab9aaae460da35d24d700a0c5af227b280c0456075373a52d95f2d9100d5d8e0.json  query-af6e37c0772816e95552abe395c98d31428917c3264658b6a0446c05b667963c.json  query-b0321f8d2ace07cd9e0fff23bfa655cce8bd11e83142aa9ce806af1a96ce1a53.json  query-b2f07ed6dd01c12f1f7fd676d72ac636f4ca79603c36b7142f856e2bc243f3a0.json  query-c1f583477ce090ad56d9430d572ba6aee36b0d1006a28c6d65cb422c193750bc.json  query-c2614f7e7a8fae6a4d30d53097b85e7d7bf80a3e468f414169c97c3419936658.json  query-c69ae0b4e86288d806bd3de53707a065cbeb2252c96e51394f7056609606b7d2.json  query-d28180518ae19904ac0c93fb6f5a59efacbe547a514c78c022bb9909abee2387.json  query-d3a1f665b0796bc9431d426d2e99550f68ba63c387eae639d0fe272852bcbed1.json  (+10 more)
todoers-server/src/: config.rs  crypto.rs  db.rs  error.rs  main.rs  state.rs  wire.rs  workers.rs
todoers-types/: Cargo.toml
todoers-types/src/: lib.rs
todoers/.sqlx/: query-0573615b2ff6028179e6b19037622a24baf4a6cfd9b04d28115bade36a373bc6.json  query-11405fe45add5655d409575ef4683391d17e858cf8aca48aa16554daf0157ada.json  query-1b4eb596b163c8663ac4b27651f72f6b40e98080a08a5235f04d53bad8ba375c.json  query-2f1c9690783beb047fdaecaa2437f859640b65005f59aa7d8897a2e9a4a6f84a.json  query-34d549f7735aeaa18eb7486613d34b0492985abdcbbb6ceff7373b7eeaa565a2.json  query-3b215730787e1adf7394eb8cc5786b49a5deb0c1682989bac9b34eeaba671885.json  query-3e5538dc3ad79ac4b37b6a3d5f351336bbe84dd1b881538f2c1e36bb9ec36d9c.json  (+10 more)
todoers/src/: action.rs  (+18 more)
(+57 files in other folders)
