[workspace]
resolver = "3"
members = ["todoers", "todoers-server", "todoers-types"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Analetta \"Annie \" Ehler <annie.ehler.4@gmail.com>"]
license = "AGPL-3.0-or-later"

[workspace.dependencies]
# Database
sqlx = { version = "0.9", features = [
  "derive",
  "tls-rustls-ring-native-roots",
  "runtime-tokio",
  "macros",
  "migrate",
  "regexp",
  "uuid",
  "time",
] }


# Async runtime
futures-util = "0.3"
tokio = { version = "1.52", features = [
  "rt-multi-thread",
  "fs",
  "io-std",
  "io-util",
  "macros",
  "net",
  "time",
  "signal",
  "sync",
] }

# Web server
axum = { version = "0.8", features = [
  "tracing",
  "tokio",
  "query",
  "original-uri",
  "macros",
  "json",
  "http2",
  "http1",
  "ws",
  "tracing",
] }

# CLI
clap = { version = "4.6", features = ["derive"] }
ratatui = { version = "0.30", features = ["all-widgets", "crossterm"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["std"] }
toml = { version = "1.1", features = ["serde", "display"] }
config = { version = "0.15", default-features = false, features = [
  "async",
  "toml",
  "convert-case",
] }
serde_arrays = "0.2"
postcard = "1.1"
hex = { version = "0.4", features = ["serde"] }
loro = "1.13"
generic-array = "0.14"

# Crypto
chacha20poly1305 = "0.10"
ed25519-dalek = "2.2"
opaque-ke = { version = "4.0", features = [
  "ristretto255",
  "serde",
  "std",
  "argon2",
] }
argon2 = "0.5.3"
subtle = "2"
getrandom = "0.4"
dryoc = "0.8"
sha2 = "0.11"
oldsha2 = { package = "sha2", version = "0.10" }
old_rand_core = { package = "rand_core", version = "0.6" }
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1.9", features = ["alloc", "derive", "serde"] }
hmac = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Reporting
anyhow = "1.0"
thiserror = "2.0"

# Utilities
bytes = "1.11"
dashmap = "6"
uuid = { version = "1.23", features = ["v4", "serde"] }
base64 = "0.22"
time = { version = "0.3", features = [
  "alloc",
  "formatting",
  "local-offset",
  "std",
  "serde-human-readable",
  "serde-well-known",
  "parsing",
  "serde",
  "macros",
] }
directories = "6.0"
