[workspace]
resolver = "3"
members = ["todoers", "todoers-server", "todoers-types"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Analetta \"Annie \" Ehler <annie.ehler.4@gmail.com>"]
license = "AGPL-3.0-or-later"

[workspace.dependencies]
# Database
sqlx = "0.9"

# Async runtime
futures-util = "0.3"
tokio-util = "0.7"
futures = "0.3"
tokio = { version = "1.52", features = [
  "rt-multi-thread",
  "fs",
  "io-std",
  "io-util",
  "macros",
  "net",
  "time",
  "signal",
  "sync",
  "tracing",
] }
console-subscriber = "0.5"

# Web server
axum-test = "20"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.7", features = ["trace"] }
http-body-util = "0.1"
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "rustls",
] }
axum = { version = "0.8", features = [
  "tokio",
  "query",
  "original-uri",
  "macros",
  "json",
  "http2",
  "http1",
  "ws",
  "tracing",
] }

# CLI / TUI
clap = { version = "4.6", features = [
  "derive",
  "derive",
  "wrap_help",
  "unicode",
  "string",
  "unstable-styles",
  "cargo",
] }
ratatui = { version = "0.30", features = ["all-widgets", "crossterm"] }
crossterm = { version = "0.29", features = ["serde", "event-stream"] }
unicode-width = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["std"] }
toml = { version = "1.1", features = ["serde", "display"] }
config = { version = "0.15", default-features = false, features = [
  "async",
  "toml",
  "convert-case",
  "json5",
  "json",
  "yaml",
  "ini",
] }
serde_arrays = "0.2"
humantime-serde = "1.1"
hex = { version = "0.4", features = ["serde"] }
loro = "1.13"
indexmap = { version = "2.14", features = ["serde", "std"] }

# Crypto
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
opaque-ke = { version = "4.0", features = [
  "ristretto255",
  "serde",
  "std",
  "argon2",
] }
argon2 = "0.5.3"
subtle = "2"
getrandom = "0.4"
dryoc = "0.8"
# Local-key encryption of the on-disk key cache (password-less device unlock).
# The `ssh` feature lets us encrypt to / decrypt with OpenSSH keys as well as
# native age recipients.
age = { version = "0.11", features = ["ssh", "armor"] }
sha2 = "0.11"
oldsha2 = { package = "sha2", version = "0.10" }
old_rand_core = { package = "rand_core", version = "0.6" }
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1.9", features = ["alloc", "derive", "serde"] }
hmac = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }
tracing-error = "0.2"

# Error Reporting
anyhow = "1.0"
thiserror = "2.0"
better-panic = "0.3"
signal-hook = "0.4"
human-panic = "2.0"

# Utilities
bytes = "1.11"
dashmap = "6"
uuid = { version = "1.23", features = ["v4", "serde"] }
base64 = "0.22"
time = { version = "0.3", features = [
  "alloc",
  "formatting",
  "local-offset",
  "std",
  "serde-human-readable",
  "parsing",
  "serde",
  "macros",
] }
directories = "6.0"
nohash-hasher = "0.2"

# Build
vergen-gix = { version = "10.0", features = ["build", "cargo"] }
pretty_assertions = "1.4"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
