[workspace]
resolver = "3"
members = ["todoers", "todoers-client", "todoers-server", "todoers-types"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Analetta \"Annie \" Ehler <annie.ehler.4@gmail.com>"]
license = "AGPL-3.0-or-later"

[workspace.dependencies]
# Database
sqlx = { version = "0.9", default-features = false }
# Pinned to the range sqlx-sqlite 0.9 requires (>=0.30.1, <0.38.0)
libsqlite3-sys = { version = "0.37", features = [
  "bundled-sqlcipher-vendored-openssl",
] }

# Async runtime
futures-util = "0.3"
tokio-util = "0.7"
futures = "0.3"

# WebSocket client (matches the tungstenite axum already pulls in). rustls to
# match reqwest's TLS backend; no native-tls in the tree.
http = "1.4"
tokio-tungstenite = { version = "0.29", default-features = false, features = [
  "connect",
  "rustls-tls-native-roots",
] }
tokio = { version = "1.52", features = [
  "rt-multi-thread",
  "fs",
  "io-std",
  "io-util",
  "macros",
  "net",
  "time",
  "signal",
  "sync",
  "tracing",
] }
console-subscriber = "0.5"

# Web server
axum-test = "21"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.7", features = ["trace"] }
http-body-util = "0.1"
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "rustls",
] }
axum = { version = "0.8", features = [
  "tokio",
  "query",
  "original-uri",
  "macros",
  "json",
  "http2",
  "http1",
  "ws",
  "tracing",
] }

# CLI / TUI
clap = { version = "4.6", features = [
  "derive",
  "derive",
  "wrap_help",
  "unicode",
  "string",
  "unstable-styles",
  "cargo",
] }
ratatui = { version = "0.30", features = ["all-widgets", "crossterm"] }
ratatui-image = "11.0"
ratatui-textarea = { version = "0.9", features = ["search"] }
tachyonfx = "0.25"
tui-widgets = { version = "0.7", default-features = false, features = [
  "popup",
  "prompts",
  "scrollbar",
  "scrollview",
] }
crossterm = { version = "0.29", features = ["serde", "event-stream"] }
unicode-width = "0.2"
dialoguer = { version = "0.12", default-features = false, features = [
  "password",
] }

# Realtime collaboration
loro = "1.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.1", features = ["alloc", "use-std"] }
serde_json = { version = "1.0", features = ["std"] }
toml = { version = "1.1", features = ["serde", "display"] }
config = { version = "0.15", default-features = false, features = [
  "async",
  "toml",
  "convert-case",
  "json5",
  "json",
  "yaml",
  "ini",
] }
serde_arrays = "0.2"
humantime-serde = "1.1"
hex = { version = "0.4", features = ["serde"] }
indexmap = { version = "2.14", features = ["serde", "std"] }

# Crypto
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
opaque-ke = { version = "4.0", features = [
  "ristretto255",
  "serde",
  "std",
  "argon2",
] }
argon2 = "0.5"
subtle = "2"
getrandom = "0.4"
dryoc = "0.8"
sha2 = "0.11"
oldsha2 = { package = "sha2", version = "0.10" }
old_rand_core = { package = "rand_core", version = "0.6" }
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1.9", features = ["alloc", "derive", "serde"] }
hmac = "0.13"
x-wing = { version = "0.1.0-rc", features = ["zeroize", "getrandom"] }
keyring-core = "1.0"
windows-native-keyring-store = "1.1.0"
apple-native-keyring-store = { version = "1.0.0", features = ["keychain"] }
zbus-secret-service-keyring-store = { version = "1.0.0", features = [
  "rt-tokio-crypto-rust",
] }
tss-esapi = "7.7.0"
hkdf = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }
tracing-appender = "0.2"
tracing-error = "0.2"

# Error Reporting
anyhow = "1.0"
thiserror = "2.0"
better-panic = "0.3"
signal-hook = "0.4"
human-panic = "2.0"

# Utilities
bytes = "1.11"
dashmap = "6"
uuid = { version = "1.23", features = ["v4", "serde"] }
base64 = "0.22"
time = { version = "0.3", features = [
  "alloc",
  "formatting",
  "local-offset",
  "std",
  "serde-human-readable",
  "parsing",
  "serde",
  "macros",
] }
directories = "6.0"
nohash-hasher = "0.2"
hybrid-array = "0.4"

# Build
vergen-gix = { version = "10.0", features = ["build", "cargo"] }
pretty_assertions = "1.4"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
