[package]
name = "todoers-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
todoers-types = { path = "../todoers-types", features = ["postgres"] }

sqlx = { workspace = true, features = [
  "derive",
  "tls-rustls-ring-native-roots",
  "runtime-tokio",
  "macros",
  "migrate",
  "regexp",
  "uuid",
  "time",
  "postgres",
] }
tokio = { workspace = true }
axum = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
serde_arrays = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
ed25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
getrandom = { workspace = true }
dryoc = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
opaque-ke = { workspace = true }
sha2 = { workspace = true }
old_rand_core = { workspace = true }
oldsha2 = { workspace = true }
generic-array = { workspace = true }
time = { workspace = true }
directories = { workspace = true }
hmac = { workspace = true }
