[package]
name = "todoers-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_arrays = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
hmac = { workspace = true }
sqlx = { workspace = true, features = [
  "derive",
  "runtime-tokio",
  "macros",
  "uuid",
  "time",
] }
base64 = { workspace = true }
opaque-ke = { workspace = true }
oldsha2 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
old_rand_core = { workspace = true }

[features]
default = []
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
