[package]
name = "todoers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
todoers-types = { path = "../todoers-types" }

sqlx = { workspace = true, features = [
  "derive",
  "runtime-tokio",
  "macros",
  "migrate",
  "regexp",
  "time",
  "sqlite",
  "sqlx-toml",
] }
serde = { workspace = true }
clap = { workspace = true }
ratatui = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
dryoc = { workspace = true }
age = { workspace = true }
opaque-ke = { workspace = true }
argon2 = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
old_rand_core = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
tracing = { workspace = true }
crossterm = { workspace = true }
unicode-width = { workspace = true }
directories = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
signal-hook = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-error = { workspace = true }
nohash-hasher = { workspace = true }
human-panic = { workspace = true }
better-panic = { workspace = true }
console-subscriber = { workspace = true }
indexmap = { workspace = true }
ratatui-image = { workspace = true }
ratatui-textarea = { workspace = true }
tachyonfx = { workspace = true }
tui-widgets = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[build-dependencies]
vergen-gix = { workspace = true }
anyhow = { workspace = true }
